Fixed overflow scroll messing with height bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,8 +84,11 @@ li {
   box-sizing: border-box;
   padding: 5px;
   box-shadow: 6px 6px 10px 0px #525252;
+}
+
+.map-search-container > .searchbar-container > .autocompletions-container > ul {
   max-height: 200px;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .map-search-container > .searchbar-container > .autocompletions-container li {
